--- a/conf/application.conf
+++ b/conf/application.conf
@@ -11,7 +11,7 @@
 application.secret="changeme"
 application.secret=${?APP_SECRET}
 
-play.http.context="dev"
+play.http.context="/"
 
 # The application languages
 # ~~~~~
@@ -57,17 +57,4 @@ slick.default="models.*"
 
 applyEvolutions.default=true
 
-# Logger
-# ~~~~~
-# You can also configure logback (http://logback.qos.ch/),
-# by providing an application-logger.xml file in the conf directory.
-
-# Root logger:
-logger.root=ERROR
-
-# Logger used by the framework:
-logger.play=INFO
-
-# Logger provided to your application:
-logger.application=DEBUG
-
+app.version="SNAPSHOT"
