JPA and evolutions scripts

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -40,7 +40,7 @@ application.langs="en"
 # By convention, the default datasource is named `default`
 #
 db.default.driver=org.postgresql.Driver
-db.default.url="jdbc:postgresql://localhost/play_heroku_seed"
+db.default.url="jdbc:postgresql://localhost/horsleydb"
 db.default.user="appuser"
 db.default.password="Summer99time"
 
@@ -50,11 +50,14 @@ slick.default="models.*"
 # db.default.user=sa
 # db.default.password=""
 
+jpa.default=defaultPersistenceUnit
+
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
 # evolutionplugin=disabled
-
 applyEvolutions.default=true
+//play.evolutions.db.default.enabled = true
+//play.evolutions.db.default.schema = public
 
 app.version="SNAPSHOT"
