DB and Guice config

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -39,25 +39,40 @@ application.langs="en"
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
+
+
+
+
+
+db.default=defaultPersistenceUnit
+db.default.logSql=true
+db.default.pool=bonecp
 db.default.driver=org.postgresql.Driver
-db.default.url="jdbc:postgresql://localhost/horsleydb"
 db.default.user="appuser"
 db.default.password="Summer99time"
+db.default.url="jdbc:postgresql://localhost:5432/horsleydb"
+db.default.jndiName=DefaultDS
+
+
+//db.default.bonecp.partitionCount=3
+//db.default.bonecp.maxConnectionsPerPartition=10
+//db.default.logStatements=true
+//db.default.acquireRetryAttempts=1
 
 #override default url if environment variable is present
 db.default.url=${?DATABASE_URL}
-slick.default="models.*"
-# db.default.user=sa
-# db.default.password=""
-
-jpa.default=defaultPersistenceUnit
+//slick.default="models.*"
 
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
 # evolutionplugin=disabled
+
 applyEvolutions.default=true
+
 //play.evolutions.db.default.enabled = true
 //play.evolutions.db.default.schema = public
 
 app.version="SNAPSHOT"
+
+play.modules.enabled += "modules.HorsleyGuiceModule"
