--- a/conf/application.conf
+++ b/conf/application.conf
@@ -39,20 +39,24 @@ application.langs="en"
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
+//db.default=defaultPersistenceUnit
+//db.default.pool=bonecp
+//db.default.driver=org.postgresql.Driver
+//db.default.user="appuser"
+//db.default.password="Summer99time"
+//db.default.url="jdbc:postgresql://localhost/horsleydb"
+//db.default.jndiName=DefaultDS
 
-
-
-
-
-db.default=defaultPersistenceUnit
-db.default.logSql=true
-db.default.pool=bonecp
+jpa.default=defaultPersistenceUnit
 db.default.driver=org.postgresql.Driver
-db.default.user="appuser"
+db.default.user=appuser
 db.default.password="Summer99time"
-db.default.url="jdbc:postgresql://localhost:5432/horsleydb"
+db.default.url="jdbc:postgresql://localhost/horsleydb"
 db.default.jndiName=DefaultDS
+db.default.logStatements=true
+db.default.logSql=true
 
+play.db.pool=bonecp
 
 //db.default.bonecp.partitionCount=3
 //db.default.bonecp.maxConnectionsPerPartition=10
@@ -60,7 +64,7 @@ db.default.jndiName=DefaultDS
 //db.default.acquireRetryAttempts=1
 
 #override default url if environment variable is present
-db.default.url=${?DATABASE_URL}
+//db.default.url=${?DATABASE_URL}
 //slick.default="models.*"
 
 # Evolutions
