--- a/conf/application.conf
+++ b/conf/application.conf
@@ -8,8 +8,8 @@
 # This must be changed for production, but we recommend not changing it in this file.
 #
 # See http://www.playframework.com/documentation/latest/ApplicationSecret for more details.
-application.secret="changeme"
-application.secret=${?APP_SECRET}
+play.crypto.secret="changeme"
+play.crypto.secret=${?APP_SECRET}
 
 play.http.context="/"
 
