Bug fix - ngCookies provider not found error fixed

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -49,11 +49,11 @@ application.langs="en"
 
 jpa.default=defaultPersistenceUnit
 db.default.driver=org.postgresql.Driver
-db.default.user=appuser
+db.default.username=appuser
 db.default.password="Summer99time"
 db.default.url="jdbc:postgresql://localhost/horsleydb"
 db.default.jndiName=DefaultDS
-db.default.logStatements=true
+db.default.bonecp.logStatements=true
 db.default.logSql=true
 
 play.db.pool=bonecp
@@ -72,7 +72,7 @@ play.db.pool=bonecp
 # You can disable evolutions if needed
 # evolutionplugin=disabled
 
-applyEvolutions.default=true
+play.evolutions.db.default.autoApply=true
 
 //play.evolutions.db.default.enabled = true
 //play.evolutions.db.default.schema = public
