Changes to run on Heroku

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -39,33 +39,25 @@ application.langs="en"
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
-//db.default=defaultPersistenceUnit
-//db.default.pool=bonecp
-//db.default.driver=org.postgresql.Driver
-//db.default.user="appuser"
-//db.default.password="Summer99time"
-//db.default.url="jdbc:postgresql://localhost/horsleydb"
-//db.default.jndiName=DefaultDS
+#db.default.driver=org.postgresql.Driver
+#db.default.url=${DATABASE_URL}
 
 jpa.default=defaultPersistenceUnit
 db.default.driver=org.postgresql.Driver
-db.default.username=appuser
-db.default.password="Summer99time"
-db.default.url="jdbc:postgresql://localhost/horsleydb"
+#db.default.username=appuser
+#db.default.password="Summer99time"
+db.default.url="jdbc:postgresql://localhost/js"
 db.default.jndiName=DefaultDS
 db.default.bonecp.logStatements=true
 db.default.logSql=true
 
-play.db.pool=bonecp
+//play.db.pool=bonecp
 
 //db.default.bonecp.partitionCount=3
 //db.default.bonecp.maxConnectionsPerPartition=10
 //db.default.logStatements=true
 //db.default.acquireRetryAttempts=1
 
-#override default url if environment variable is present
-//db.default.url=${?DATABASE_URL}
-//slick.default="models.*"
 
 # Evolutions
 # ~~~~~
