add allowed hosts

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -65,3 +65,8 @@ play.evolutions.db.default.autoApply=true
 app.version="SNAPSHOT"
 
 play.modules.enabled += "modules.Module"
+
+play.filters.hosts {
+  # Allow requests to example.com, its subdomains, and localhost:9000.
+  allowed = ["www.horsleyparish.co.uk", "horsleyparish.co.uk", "localhost:9000"]
+}
