PCC and CORS changes

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -68,5 +68,5 @@ play.modules.enabled += "modules.Module"
 
 play.filters.hosts {
   # Allow requests to example.com, its subdomains, and localhost:9000.
-  allowed = ["www.horsleyparish.co.uk", "horsleyparish.co.uk", "localhost:9000"]
+  allowed = ["www.horsleyparish.co.uk", "horsleyparish.co.uk", "horsleyparish.herokuapp.com", "warm-ridge-10226.herokuapp.com", "localhost:9000"]
 }
